@@ -1,3 +1,15 @@
+2006-06-09  Paolo Capriotti  <paolo.capriotti@gmail.com>
+
+	* Added example t9.
+
+2006-06-09  Paolo Capriotti  <paolo.capriotti@gmail.com>
+
+	* Added example t8. It almost works.
+	* Fixed resolve_classname.
+	* Added IDisposable to QObject's parents.
+	* Fixed off-by-one error when handling arguments in
+	  SmokeInvocation.InvokeMethod.
+
 2006-06-08  Richard Dale  <rdale@foton.es>
 
 	* Example t7 now works, which means that both custom slots
